--- a/css/common.css
+++ b/css/common.css
@@ -31,5 +31,12 @@ button {
 }
 .gallery {
   display: flex;
+  justify-content: center;
   list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+}
+.gallery-item:first-child {
+  margin-left: 0;
 }
